...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513"
        android:onClick="buttonKalender"
        />

    <Button
        android:id="@+id/button_mVeranstaltungen"
        android:layout_width="361dp"
        android:layout_height="61dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/meine_veranstaltungen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <Button
        android:id="@+id/button_Veranstaltungsplan"
        android:layout_width="361dp"
        android:layout_height="61dp"
        android:backgroundTint="#3F51B5"
        android:onClick="buttonVeranstaltungsplan"
        android:text="@string/veranstaltungsplan"
        app:layout_constraintBottom_toBottomOf="parent"
...
